--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/x-date-pickers": "^6.13.0",
     "@prisma/client": "^5.1.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
