--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "playtoria",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "npx prisma migrate dev --name init",
+    "update": "node updater.js"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -19,14 +22,17 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "html-react-parser": "^4.2.2",
     "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1"   
   }
 }
