--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "playtoria",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "migrate": "npx prisma migrate dev --name init",
-    "update": "node updater.js"
+    "update": "node updater.js",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -20,19 +20,20 @@
     "@mui/x-date-pickers": "^6.13.0",
     "@prisma/client": "^5.1.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "html-react-parser": "^4.2.2",
     "moment": "^2.29.4",
     "next": "13.4.19",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "prisma": "^5.1.1"   
+    "prisma": "^5.1.1"
   }
 }
