--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run prismaGen && next build",
+    "build": "npm run migrate && next build",
     "start": "next start",
     "lint": "next lint",
     "prismaGen": "npx prisma generate",
