Add proper eslint rules and change files accordingly. Add query parameters for search and filter.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,28 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "airbnb-base",
+    "next/core-web-vitals",
+    "next"       
+  ],
+  "rules": {
+    "max-len": ["error", { "code": 120 }],
+    "no-underscore-dangle": 0,
+    "import/prefer-default-export": [
+      0,
+      { "target": "single" }
+    ],
+    "no-useless-escape": 0,
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
+  }
 }
