--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
-    "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "html-react-parser": "^4.2.2",
     "moment": "^2.29.4",
@@ -35,6 +34,10 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.1.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "prisma": "^5.1.1"
   }
 }
