--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^6.13.0",
+    "@next/third-parties": "^14.1.3",
     "@prisma/client": "^5.1.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
